Fixed images and added small logos at the footer

--- a/styles.css
+++ b/styles.css
@@ -148,6 +148,9 @@ header h1 {
   position: relative;
   margin: auto;
 }
+.slideshow-container img {
+  height: 100%;
+}
 
 /* Hide the images by default */
 .mySlides {
