--- a/src/styles.css
+++ b/src/styles.css
@@ -407,6 +407,19 @@ h3 {
     transform: scale(1.1);
 }
 
+/* Devuelve esto a tu index.css si lo borraste */
+.slideshow-container img {
+    width: 100%;
+    height: 500px; /* O la altura que prefieras */
+    object-fit: cover;
+}
+
+@media (max-width: 768px) {
+    .slideshow-container img {
+        height: 250px; /* Altura para celular */
+    }
+}
+
 /* Seleccionamos específicamente los botones de idioma para no afectar otros botones */
 .lang-btn {
     background-color: transparent !important; /* Elimina el fondo gris */
